Changed main.xml and renamed TamagotchiProjectActivity to Main

--- a/Tamagotchi Project/res/values/strings.xml
+++ b/Tamagotchi Project/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="hello">Hello World, TamagotchiProjectActivity!</string>
     <string name="app_name">Tamagotchi</string>
+    <string name="Username">username</string>
+    <string name="username">Username</string>
 
 </resources>
